Done. enables you to add a task, persisit that task to local storage. Delete single task, delete muliple tasks, clear all tasks from localstorage.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                     <div class="col-sm-12">
                                         <form id="task-form">
                                             <div class="form-group">
-                                                <label for="New Task">New Task</label>
+                                                <label for="task">New Task</label>
                                                 <input type="text" name="task" id="task" class="form-control">
                                             </div>
                                             <input type="submit" name="add_task"  value="Add Task" class="btn btn-success" >
@@ -33,7 +33,7 @@
 
                                         <h3 class="card-title">Tasks</h3>
                                             <div class="form-group">
-                                                <label for="New Task">Filter Tasks</label>
+                                                <label for="filter">Filter Tasks</label>
                                                 <input type="text" name="filter" id="filter" class="form-control">
                                             </div>
                                             
